style : delete button align on top fix : double event conflict handle on delete button

--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -57,7 +57,8 @@ textarea {
   justify-items: center;
 }
 
-.form-container {
+.form-container,
+.btn-right-container {
   height: 100%;
 }
 
